@@ -23,9 +23,10 @@ end_comment
 begin_class
 DECL|class|Token
 specifier|public
-specifier|final
 class|class
 name|Token
+implements|implements
+name|Cloneable
 block|{
 DECL|field|termText
 name|String
@@ -162,6 +163,21 @@ return|return
 name|positionIncrement
 return|;
 block|}
+comment|/** Sets the Token's term text. */
+DECL|method|setTermText
+specifier|public
+name|void
+name|setTermText
+parameter_list|(
+name|String
+name|text
+parameter_list|)
+block|{
+name|termText
+operator|=
+name|text
+expr_stmt|;
+block|}
 comment|/** Returns the Token's term text. */
 DECL|method|termText
 specifier|public
@@ -212,7 +228,6 @@ return|;
 block|}
 DECL|method|toString
 specifier|public
-specifier|final
 name|String
 name|toString
 parameter_list|()
@@ -288,6 +303,37 @@ operator|.
 name|toString
 argument_list|()
 return|;
+block|}
+DECL|method|clone
+specifier|public
+name|Object
+name|clone
+parameter_list|()
+block|{
+try|try
+block|{
+return|return
+name|super
+operator|.
+name|clone
+argument_list|()
+return|;
+block|}
+catch|catch
+parameter_list|(
+name|CloneNotSupportedException
+name|e
+parameter_list|)
+block|{
+throw|throw
+operator|new
+name|RuntimeException
+argument_list|(
+name|e
+argument_list|)
+throw|;
+comment|// shouldn't happen since we implement Cloneable
+block|}
 block|}
 block|}
 end_class
